<?xml version="1.0"?>
<package format="2">
  <name>traj_lo</name>
  <version>0.0.0</version>
  <description>traj_lo_package</description>

  <maintainer email="ghm@mail.nankai.edu.cn">Haiming Gao</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>livox_ros_driver</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->

  </export>
</package>
